--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Attire Home</title> 
+        <title>Botique</title> 
         
         
         <link rel="stylesheet" href= "bootstrap-5.1.3-dist/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
             <div class="container">
                 <a class="navbar-brand" href="Html-1.html">
                 <img src="images/business-logo-design-template-78655edda18bc1196ab28760f1535baa_screen.jpg" alt ="site icon">
-       <span class="text-uppercase font-awesome-lighter ms-2">Attire</span>
+       <span class="text-uppercase font-awesome-lighter ms-2">Dress Botique</span>
                 </a>
                 <div class="order-lg-2 nav-btns">
                     <button type="button" class="btn position-relative">
